# ardcore

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
community_extensions/: README.md
community_extensions/beehealthy/: README.md  benchmark_rheuma.py  graph.py  hypothesis_generator.py  main.py  requirements.txt  utils.py
community_extensions/beehealthy/agents/: ethic_and_bias_analyst.py
community_extensions/beehealthy/datasets/: RheumaMIR.csv
community_extensions/beehealthy/tools/: books.py  ncn.py  pubmed_by_year.py
community_extensions/docs/: literature.md  technical-guide.md
community_extensions/sample_code/: README.md  hypothesis_generator.py  main.py
examples/dataset_example/: example.py
examples/dataset_item_example/: example.py
examples/full_graph_example/: README.md  example.py
examples/full_graph_example/data_incremental/1b04082f3720a6716ab48da8dfbe9581592d6b53247350c2364ec6f3ccda1336/: metadata.json
examples/full_graph_example/data_incremental/1b04082f3720a6716ab48da8dfbe9581592d6b53247350c2364ec6f3ccda1336/processed/: 1b04082f3720a6_processed.json  1b04082f3720a6_relevance.json  1b04082f3720a6_relevance_think.md
examples/full_graph_example/data_incremental/1b04082f3720a6716ab48da8dfbe9581592d6b53247350c2364ec6f3ccda1336/raw/: 1b04082f3720a6.md  1b04082f3720a6.xml
examples/full_graph_example/data_incremental/1b26747dbe9b24b19ccf1800187b6e83f513443a91f657c151d41950891a5da1/: metadata.json
examples/full_graph_example/data_incremental/1b26747dbe9b24b19ccf1800187b6e83f513443a91f657c151d41950891a5da1/processed/: 1b26747dbe9b24_processed.json  1b26747dbe9b24_relevance.json  1b26747dbe9b24_relevance_think.md
examples/full_graph_example/data_incremental/1b26747dbe9b24b19ccf1800187b6e83f513443a91f657c151d41950891a5da1/raw/: 1b26747dbe9b24.md  1b26747dbe9b24.xml
examples/full_graph_example/data_initial/0fb38cab12182478c990b577f58757d5a8e3905479c7b9397fcb3291566df2bf/: metadata.json
examples/full_graph_example/data_initial/0fb38cab12182478c990b577f58757d5a8e3905479c7b9397fcb3291566df2bf/processed/: 0fb38cab121824_processed.json  0fb38cab121824_relevance.json  0fb38cab121824_relevance_think.md
examples/full_graph_example/data_initial/0fb38cab12182478c990b577f58757d5a8e3905479c7b9397fcb3291566df2bf/raw/: 0fb38cab121824.md  0fb38cab121824.xml
examples/full_graph_example/data_initial/1a77df04503c9c7b84c9628c4b920ef806ac313bf73b87ae3558741ec958b9d9/: metadata.json
examples/full_graph_example/data_initial/1a77df04503c9c7b84c9628c4b920ef806ac313bf73b87ae3558741ec958b9d9/processed/: 1a77df04503c9c_processed.json  1a77df04503c9c_relevance.json  1a77df04503c9c_relevance_think.md
examples/full_graph_example/data_initial/1a77df04503c9c7b84c9628c4b920ef806ac313bf73b87ae3558741ec958b9d9/raw/: 1a77df04503c9c.md  1a77df04503c9c.xml
examples/generate_hypothesis/: example.py
examples/generate_hypothesis/hyp_langgraph/: generate_hypothesis.py  graph.py
examples/generate_subgraph/: example.py
examples/knowledge_graph_example/: knowledge_graph_example.py
examples/storage/: example.py
examples/triplets_example/: dataset_triplets_example.py  triplets_example.py
src/ard/: cli.py
src/ard/data/: chunking.py  dataset.py  dataset_item.py  research_paper.py  triplets.py  triplets_refiner.py  types.py
src/ard/data/triplets_extractor/: extract_refine.py  extract_review.py  extract_swarm.py  pipeline.py  utils.py
src/ard/data/triplets_extractor/config/: __init__.py  factory.py  pipeline.py
src/ard/data/triplets_extractor/config/extractors/: __init__.py  refine.py  review.py  swarm.py
src/ard/hypothesis/: saver.py
src/ard/knowledge_graph/: knowledge_graph.py
src/ard/knowledge_graph/node_merger/: embedding_based.py
src/ard/storage/file/: base.py  s3.py  utils.py
src/ard/storage/graph/: neo4j.py  networkx.py
src/ard/subgraph/: prompts.py  subgraph.py
src/ard/subgraph/subgraph_generator/: embedding.py  llm_walk.py  randomized_embedding.py  shortest_path.py
src/ard/utils/: embedder.py
src/ardcore/: README.md  cli.py
src/ardcore/data/: chunking.py  dataset.py  dataset_item.py  distillers.py  knowledge_graph.yaml  research_paper.py  triplets.py  triplets_refiner.py
src/ardcore/data/triplets_extractor/: extract_refine.py  extract_review.py  extract_swarm.py  pipeline.py  utils.py
src/ardcore/data/triplets_extractor/config/: base.py
src/ardcore/data/triplets_extractor/config/extractors/: refine.py  review.py  swarm.py
src/ardcore/hypothesis/: __init__.py  hypothesis.py  saver.py  types.py
src/ardcore/knowledge_graph/: __init__.py  knowledge_graph.py
src/ardcore/knowledge_graph/node_merger/: __init__.py  base.py  embedding_based.py  exact_match.py  llm_based.py
src/ardcore/storage/file/: __init__.py  local.py  s3.py  storage_manager.py  utils.py
src/ardcore/storage/graph/: __init__.py  neo4j.py  networkx.py
src/ardcore/subgraph/: __init__.py  subgraph.py
src/ardcore/subgraph/subgraph_generator/: __init__.py  base.py  embedding.py  llm_walk.py  random_walk.py  randomized_embedding.py  shortest_path.py
tests/: conftest.py  test_dataset.py  test_dataset_item.py  test_dataset_item_storage.py  test_dataset_structure.py  test_embedder.py  test_hypothesis.py  test_ingestion_pipeline.py  test_knowledge_graph.py  test_metadata.py  test_metadata_citations.py  test_node_merger.py  test_research_paper.py  test_storage.py  test_storage_manager.py  test_storage_utils.py  test_subgraph.py  test_triplets.py  test_triplets_generation_pipeline.py
