[project]
name = "ardcore"
version = "0.1.1"
description = "ARDCore is the core library for building, curating, and mining knowledge graphs to enable autonomous research discovery."
readme = "README.md"
authors = [
    { name = "Damian Rolek", email = "d@beeard.ai" },
    { name = "Jacek Wiland", email = "j@beeard.ai" },
    { name = "Kuba Kwiecien", email = "k@beeard.ai" },
    { name = "Mateusz Walczak", email = "m@beeard.ai" },
    { name = "Jakub Gierlachowski", email = "v@beeard.ai" },
]
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "boto3>=1.37.10",
    "click>=8.1.7",
    "loguru>=0.7.3",
    "networkx>=3.4.2",
    "neo4j>=5.28.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "openpyxl>=3.1.5",

    # ML/AI dependencies
    "litellm>=1.65.1",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.43",
    "langchain-text-splitters>=0.3.0",
    "scikit-learn>=1.3.0",
    
    # Utilities
    "dotenv>=0.9.9",
    "tqdm>=4.66.0",
    
    # Optional dependencies (consider making these optional in the future)
    "matplotlib>=3.10.1",
    "langfuse>=2.59.7",
    "google-genai>=1.15.0",
    "openai>=1.0.0",
]

[project.scripts]
ardcore = "ardcore.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "moto>=5.1.0",
    "ruff>=0.11.0",
    "tomli>=2.2.1",
]
