[project]
name = "ardcore"
version = "0.1.1"
description = "ARDCore is the core library for building, curating, and mining knowledge graphs to enable autonomous research discovery."
readme = "README.md"
authors = [
    { name = "Damian Rolek", email = "d@beeard.ai" },
    { name = "Jacek Wiland", email = "j@beeard.ai" },
    { name = "Kuba Kwiecien", email = "k@beeard.ai" },
    { name = "Mateusz Walczak", email = "m@beeard.ai" },
    { name = "Jakub Gierlachowski", email = "v@beeard.ai" },
]
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "boto3>=1.37.10",           # Used in: ardcore/src/ardcore/storage/file/s3.py
    "click>=8.1.7",             # Used in: ardcore/src/ardcore/cli.py
    "loguru>=0.7.3",            # Used in: ardcore/src/ardcore/cli.py, ardcore/src/ardcore/utils/embedder.py, and many others
    "networkx>=3.4.2",          # Used in: ardcore/src/ardcore/storage/graph/networkx.py, ardcore/src/ardcore/data/triplets.py
    "neo4j>=5.28.1",            # Used in: ardcore/src/ardcore/storage/graph/neo4j.py
    "pandas>=2.2.3",            # Used in: ardcore/src/ardcore/cli.py, ardcore/src/ardcore/utils/postgres.py, ardcore/src/ardcore/data/triplets.py
    "pydantic>=2.10.6",         # Used in: ardcore/src/ardcore/data/triplets_extractor/extract_swarm.py
    "openpyxl>=3.1.5",          # Used indirectly through pandas in: ardcore/src/ardcore/cli.py

    # ML/AI dependencies
    "google-genai>=1.15.0",     # Used in: ardcore/src/ardcore/utils/embedder.py (conditionally imported)
    "litellm>=1.65.1",          # Used in: ardcore/src/ardcore/data/triplets_extractor/utils.py, ardcore/src/ardcore/data/triplets_refiner.py
    "langchain-core>=0.3.43",   # Used in: ardcore/src/ardcore/subgraph/prompts.py, ardcore/src/ardcore/subgraph/subgraph_generator/llm_walk.py
    "langchain-text-splitters>=0.3.0",  # Used in: ardcore/src/ardcore/data/chunking.py
    "langfuse>=2.59.7",         # Used in: ardcore/src/ardcore/data/research_paper.py, ardcore/src/ardcore/data/triplets_extractor/utils.py
    "openai>=1.0.0",            # Used in: ardcore/src/ardcore/cli.py
    "scikit-learn>=1.3.0",      # Used in: ardcore/src/ardcore/knowledge_graph/node_merger/embedding_based.py

    # Utilities
    "dotenv>=0.9.9",            # Used in: ardcore/src/ardcore/utils/postgres.py
    "matplotlib>=3.10.1",       # Used in: ardcore/src/ardcore/subgraph/subgraph.py
    "tqdm>=4.66.0",             # Used in: ardcore/src/ardcore/utils/embedder.py, ardcore/src/ardcore/knowledge_graph/node_merger/embedding_based.py
]

[project.scripts]
ardcore = "ardcore.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "moto>=5.1.0",
    "ruff>=0.11.0",
    "tomli>=2.2.1",
]
